// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckboxGroup /> should render with label 1`] = `
<View
  accessibilityLabelledBy="checkbox-group-19-label-24"
  display="flex"
  flexDirection="column"
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "column",
      },
    ]
  }
>
  <View
    marginBottom="spacing.2"
    marginRight="spacing.5"
    style={
      Array [
        Object {
          "marginBottom": 4,
          "marginRight": 16,
        },
      ]
    }
  >
    <View
      alignItems="center"
      display="flex"
      flexDirection="row"
      flexWrap="wrap"
      gap="spacing.0"
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "gap": 0,
          },
        ]
      }
    >
      <Text
        color="surface.text.subdued.lowContrast"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="semibold"
        lineHeight="xs"
        style={
          Array [
            Object {
              "color": "hsla(217, 18%, 45%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "600",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      >
        Select fruits
      </Text>
      <View
        style={
          Array [
            Object {
              "borderColor": "black",
              "borderStyle": "solid",
              "borderWidth": 0,
              "clip": "rect(0 0 0 0)",
              "clipPath": "inset(50%)",
              "height": 1,
              "left": -10000,
              "marginBottom": -1,
              "marginLeft": 0,
              "marginRight": -1,
              "marginTop": 0,
              "overflow": "hidden",
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": 1,
              "wordWrap": "normal",
            },
          ]
        }
      >
        <Text
          color="surface.text.normal.lowContrast"
          fontFamily="text"
          fontSize={100}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight="m"
          style={
            Array [
              Object {
                "color": "hsla(217, 56%, 17%, 1)",
                "fontFamily": "Lato",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 20,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
              Object {},
            ]
          }
        >
          , 
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {},
      ]
    }
  >
    <View
      display="flex"
      flexDirection="column"
      style={
        Array [
          Object {
            "display": "flex",
            "flexDirection": "column",
          },
        ]
      }
    >
      <View
        marginBottom="spacing.3"
        style={
          Array [
            Object {
              "marginBottom": 8,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {},
            ]
          }
        >
          <View
            accessibilityInvalid={false}
            accessibilityRequired={false}
            accessibilityRole="checkbox"
            accessibilityState={
              Object {
                "checked": false,
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "display": "flex",
                  "flexDirection": "row",
                  "marginBottom": 2,
                  "marginTop": 2,
                },
              ]
            }
            value="apple"
          >
            <View
              display="flex"
              flexDirection="column"
              style={
                Array [
                  Object {
                    "display": "flex",
                    "flexDirection": "column",
                  },
                ]
              }
            >
              <View
                alignItems="center"
                display="flex"
                flexDirection="row"
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "display": "flex",
                      "flexDirection": "row",
                    },
                  ]
                }
              >
                <View
                  isChecked={false}
                  isNegative={false}
                  size="medium"
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "transparent",
                        "borderColor": "hsla(214, 18%, 69%, 1)",
                        "borderRadius": 2,
                        "borderStyle": "solid",
                        "borderWidth": 1.5,
                        "display": "flex",
                        "height": 16,
                        "justifyContent": "center",
                        "marginBottom": 2,
                        "marginLeft": 2,
                        "marginRight": 2,
                        "marginTop": 2,
                        "position": "relative",
                        "width": 16,
                      },
                    ]
                  }
                />
                <View
                  marginLeft="spacing.2"
                  style={
                    Array [
                      Object {
                        "marginLeft": 4,
                      },
                    ]
                  }
                />
                <Text
                  color="surface.text.subtle.lowContrast"
                  fontFamily="text"
                  fontSize={100}
                  fontWeight="regular"
                  lineHeight="l"
                  style={
                    Array [
                      Object {
                        "color": "hsla(216, 27%, 36%, 1)",
                        "fontFamily": "Lato",
                        "fontSize": 14,
                        "fontStyle": "normal",
                        "fontWeight": "400",
                        "lineHeight": 24,
                        "marginBottom": 0,
                        "marginLeft": 0,
                        "marginRight": 0,
                        "marginTop": 0,
                        "paddingBottom": 0,
                        "paddingLeft": 0,
                        "paddingRight": 0,
                        "paddingTop": 0,
                        "textDecorationLine": "none",
                      },
                    ]
                  }
                >
                  Apple
                </Text>
              </View>
              <View
                marginLeft="spacing.7"
                style={
                  Array [
                    Object {
                      "marginLeft": 24,
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        marginBottom="spacing.3"
        style={
          Array [
            Object {
              "marginBottom": 8,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {},
            ]
          }
        >
          <View
            accessibilityInvalid={false}
            accessibilityRequired={false}
            accessibilityRole="checkbox"
            accessibilityState={
              Object {
                "checked": false,
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "display": "flex",
                  "flexDirection": "row",
                  "marginBottom": 2,
                  "marginTop": 2,
                },
              ]
            }
            value="mango"
          >
            <View
              display="flex"
              flexDirection="column"
              style={
                Array [
                  Object {
                    "display": "flex",
                    "flexDirection": "column",
                  },
                ]
              }
            >
              <View
                alignItems="center"
                display="flex"
                flexDirection="row"
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "display": "flex",
                      "flexDirection": "row",
                    },
                  ]
                }
              >
                <View
                  isChecked={false}
                  isNegative={false}
                  size="medium"
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "transparent",
                        "borderColor": "hsla(214, 18%, 69%, 1)",
                        "borderRadius": 2,
                        "borderStyle": "solid",
                        "borderWidth": 1.5,
                        "display": "flex",
                        "height": 16,
                        "justifyContent": "center",
                        "marginBottom": 2,
                        "marginLeft": 2,
                        "marginRight": 2,
                        "marginTop": 2,
                        "position": "relative",
                        "width": 16,
                      },
                    ]
                  }
                />
                <View
                  marginLeft="spacing.2"
                  style={
                    Array [
                      Object {
                        "marginLeft": 4,
                      },
                    ]
                  }
                />
                <Text
                  color="surface.text.subtle.lowContrast"
                  fontFamily="text"
                  fontSize={100}
                  fontWeight="regular"
                  lineHeight="l"
                  style={
                    Array [
                      Object {
                        "color": "hsla(216, 27%, 36%, 1)",
                        "fontFamily": "Lato",
                        "fontSize": 14,
                        "fontStyle": "normal",
                        "fontWeight": "400",
                        "lineHeight": 24,
                        "marginBottom": 0,
                        "marginLeft": 0,
                        "marginRight": 0,
                        "marginTop": 0,
                        "paddingBottom": 0,
                        "paddingLeft": 0,
                        "paddingRight": 0,
                        "paddingTop": 0,
                        "textDecorationLine": "none",
                      },
                    ]
                  }
                >
                  Mango
                </Text>
              </View>
              <View
                marginLeft="spacing.7"
                style={
                  Array [
                    Object {
                      "marginLeft": 24,
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        marginBottom={0}
        style={
          Array [
            Object {
              "marginBottom": 0,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {},
            ]
          }
        >
          <View
            accessibilityInvalid={false}
            accessibilityRequired={false}
            accessibilityRole="checkbox"
            accessibilityState={
              Object {
                "checked": false,
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "display": "flex",
                  "flexDirection": "row",
                  "marginBottom": 2,
                  "marginTop": 2,
                },
              ]
            }
            value="orange"
          >
            <View
              display="flex"
              flexDirection="column"
              style={
                Array [
                  Object {
                    "display": "flex",
                    "flexDirection": "column",
                  },
                ]
              }
            >
              <View
                alignItems="center"
                display="flex"
                flexDirection="row"
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "display": "flex",
                      "flexDirection": "row",
                    },
                  ]
                }
              >
                <View
                  isChecked={false}
                  isNegative={false}
                  size="medium"
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "transparent",
                        "borderColor": "hsla(214, 18%, 69%, 1)",
                        "borderRadius": 2,
                        "borderStyle": "solid",
                        "borderWidth": 1.5,
                        "display": "flex",
                        "height": 16,
                        "justifyContent": "center",
                        "marginBottom": 2,
                        "marginLeft": 2,
                        "marginRight": 2,
                        "marginTop": 2,
                        "position": "relative",
                        "width": 16,
                      },
                    ]
                  }
                />
                <View
                  marginLeft="spacing.2"
                  style={
                    Array [
                      Object {
                        "marginLeft": 4,
                      },
                    ]
                  }
                />
                <Text
                  color="surface.text.subtle.lowContrast"
                  fontFamily="text"
                  fontSize={100}
                  fontWeight="regular"
                  lineHeight="l"
                  style={
                    Array [
                      Object {
                        "color": "hsla(216, 27%, 36%, 1)",
                        "fontFamily": "Lato",
                        "fontSize": 14,
                        "fontStyle": "normal",
                        "fontWeight": "400",
                        "lineHeight": 24,
                        "marginBottom": 0,
                        "marginLeft": 0,
                        "marginRight": 0,
                        "marginTop": 0,
                        "paddingBottom": 0,
                        "paddingLeft": 0,
                        "paddingRight": 0,
                        "paddingTop": 0,
                        "textDecorationLine": "none",
                      },
                    ]
                  }
                >
                  Orange
                </Text>
              </View>
              <View
                marginLeft="spacing.7"
                style={
                  Array [
                    Object {
                      "marginLeft": 24,
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<CheckboxGroup /> should render with label 2`] = `
<View
  accessibilityLabelledBy="checkbox-group-49-label-54"
  display="flex"
  flexDirection="column"
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "column",
      },
    ]
  }
>
  <View
    marginBottom="spacing.2"
    marginRight="spacing.5"
    style={
      Array [
        Object {
          "marginBottom": 4,
          "marginRight": 16,
        },
      ]
    }
  >
    <View
      alignItems="center"
      display="flex"
      flexDirection="row"
      flexWrap="wrap"
      gap="spacing.0"
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "gap": 0,
          },
        ]
      }
    >
      <Text
        color="surface.text.subdued.lowContrast"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="semibold"
        lineHeight="xs"
        style={
          Array [
            Object {
              "color": "hsla(217, 18%, 45%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "600",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      >
        Select fruits
      </Text>
      <View
        style={
          Array [
            Object {
              "borderColor": "black",
              "borderStyle": "solid",
              "borderWidth": 0,
              "clip": "rect(0 0 0 0)",
              "clipPath": "inset(50%)",
              "height": 1,
              "left": -10000,
              "marginBottom": -1,
              "marginLeft": 0,
              "marginRight": -1,
              "marginTop": 0,
              "overflow": "hidden",
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": 1,
              "wordWrap": "normal",
            },
          ]
        }
      >
        <Text
          color="surface.text.normal.lowContrast"
          fontFamily="text"
          fontSize={100}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight="m"
          style={
            Array [
              Object {
                "color": "hsla(217, 56%, 17%, 1)",
                "fontFamily": "Lato",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 20,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
              Object {},
            ]
          }
        >
          , Select one
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {},
      ]
    }
  >
    <View
      display="flex"
      flexDirection="column"
      style={
        Array [
          Object {
            "display": "flex",
            "flexDirection": "column",
          },
        ]
      }
    >
      <View
        marginBottom="spacing.3"
        style={
          Array [
            Object {
              "marginBottom": 8,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {},
            ]
          }
        >
          <View
            accessibilityInvalid={false}
            accessibilityRequired={false}
            accessibilityRole="checkbox"
            accessibilityState={
              Object {
                "checked": false,
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "display": "flex",
                  "flexDirection": "row",
                  "marginBottom": 2,
                  "marginTop": 2,
                },
              ]
            }
            value="apple"
          >
            <View
              display="flex"
              flexDirection="column"
              style={
                Array [
                  Object {
                    "display": "flex",
                    "flexDirection": "column",
                  },
                ]
              }
            >
              <View
                alignItems="center"
                display="flex"
                flexDirection="row"
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "display": "flex",
                      "flexDirection": "row",
                    },
                  ]
                }
              >
                <View
                  isChecked={false}
                  isNegative={false}
                  size="medium"
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "transparent",
                        "borderColor": "hsla(214, 18%, 69%, 1)",
                        "borderRadius": 2,
                        "borderStyle": "solid",
                        "borderWidth": 1.5,
                        "display": "flex",
                        "height": 16,
                        "justifyContent": "center",
                        "marginBottom": 2,
                        "marginLeft": 2,
                        "marginRight": 2,
                        "marginTop": 2,
                        "position": "relative",
                        "width": 16,
                      },
                    ]
                  }
                />
                <View
                  marginLeft="spacing.2"
                  style={
                    Array [
                      Object {
                        "marginLeft": 4,
                      },
                    ]
                  }
                />
                <Text
                  color="surface.text.subtle.lowContrast"
                  fontFamily="text"
                  fontSize={100}
                  fontWeight="regular"
                  lineHeight="l"
                  style={
                    Array [
                      Object {
                        "color": "hsla(216, 27%, 36%, 1)",
                        "fontFamily": "Lato",
                        "fontSize": 14,
                        "fontStyle": "normal",
                        "fontWeight": "400",
                        "lineHeight": 24,
                        "marginBottom": 0,
                        "marginLeft": 0,
                        "marginRight": 0,
                        "marginTop": 0,
                        "paddingBottom": 0,
                        "paddingLeft": 0,
                        "paddingRight": 0,
                        "paddingTop": 0,
                        "textDecorationLine": "none",
                      },
                    ]
                  }
                >
                  Apple
                </Text>
              </View>
              <View
                marginLeft="spacing.7"
                style={
                  Array [
                    Object {
                      "marginLeft": 24,
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        marginBottom="spacing.3"
        style={
          Array [
            Object {
              "marginBottom": 8,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {},
            ]
          }
        >
          <View
            accessibilityInvalid={false}
            accessibilityRequired={false}
            accessibilityRole="checkbox"
            accessibilityState={
              Object {
                "checked": false,
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "display": "flex",
                  "flexDirection": "row",
                  "marginBottom": 2,
                  "marginTop": 2,
                },
              ]
            }
            value="mango"
          >
            <View
              display="flex"
              flexDirection="column"
              style={
                Array [
                  Object {
                    "display": "flex",
                    "flexDirection": "column",
                  },
                ]
              }
            >
              <View
                alignItems="center"
                display="flex"
                flexDirection="row"
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "display": "flex",
                      "flexDirection": "row",
                    },
                  ]
                }
              >
                <View
                  isChecked={false}
                  isNegative={false}
                  size="medium"
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "transparent",
                        "borderColor": "hsla(214, 18%, 69%, 1)",
                        "borderRadius": 2,
                        "borderStyle": "solid",
                        "borderWidth": 1.5,
                        "display": "flex",
                        "height": 16,
                        "justifyContent": "center",
                        "marginBottom": 2,
                        "marginLeft": 2,
                        "marginRight": 2,
                        "marginTop": 2,
                        "position": "relative",
                        "width": 16,
                      },
                    ]
                  }
                />
                <View
                  marginLeft="spacing.2"
                  style={
                    Array [
                      Object {
                        "marginLeft": 4,
                      },
                    ]
                  }
                />
                <Text
                  color="surface.text.subtle.lowContrast"
                  fontFamily="text"
                  fontSize={100}
                  fontWeight="regular"
                  lineHeight="l"
                  style={
                    Array [
                      Object {
                        "color": "hsla(216, 27%, 36%, 1)",
                        "fontFamily": "Lato",
                        "fontSize": 14,
                        "fontStyle": "normal",
                        "fontWeight": "400",
                        "lineHeight": 24,
                        "marginBottom": 0,
                        "marginLeft": 0,
                        "marginRight": 0,
                        "marginTop": 0,
                        "paddingBottom": 0,
                        "paddingLeft": 0,
                        "paddingRight": 0,
                        "paddingTop": 0,
                        "textDecorationLine": "none",
                      },
                    ]
                  }
                >
                  Mango
                </Text>
              </View>
              <View
                marginLeft="spacing.7"
                style={
                  Array [
                    Object {
                      "marginLeft": 24,
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        marginBottom={0}
        style={
          Array [
            Object {
              "marginBottom": 0,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {},
            ]
          }
        >
          <View
            accessibilityInvalid={false}
            accessibilityRequired={false}
            accessibilityRole="checkbox"
            accessibilityState={
              Object {
                "checked": false,
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "display": "flex",
                  "flexDirection": "row",
                  "marginBottom": 2,
                  "marginTop": 2,
                },
              ]
            }
            value="orange"
          >
            <View
              display="flex"
              flexDirection="column"
              style={
                Array [
                  Object {
                    "display": "flex",
                    "flexDirection": "column",
                  },
                ]
              }
            >
              <View
                alignItems="center"
                display="flex"
                flexDirection="row"
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "display": "flex",
                      "flexDirection": "row",
                    },
                  ]
                }
              >
                <View
                  isChecked={false}
                  isNegative={false}
                  size="medium"
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "transparent",
                        "borderColor": "hsla(214, 18%, 69%, 1)",
                        "borderRadius": 2,
                        "borderStyle": "solid",
                        "borderWidth": 1.5,
                        "display": "flex",
                        "height": 16,
                        "justifyContent": "center",
                        "marginBottom": 2,
                        "marginLeft": 2,
                        "marginRight": 2,
                        "marginTop": 2,
                        "position": "relative",
                        "width": 16,
                      },
                    ]
                  }
                />
                <View
                  marginLeft="spacing.2"
                  style={
                    Array [
                      Object {
                        "marginLeft": 4,
                      },
                    ]
                  }
                />
                <Text
                  color="surface.text.subtle.lowContrast"
                  fontFamily="text"
                  fontSize={100}
                  fontWeight="regular"
                  lineHeight="l"
                  style={
                    Array [
                      Object {
                        "color": "hsla(216, 27%, 36%, 1)",
                        "fontFamily": "Lato",
                        "fontSize": 14,
                        "fontStyle": "normal",
                        "fontWeight": "400",
                        "lineHeight": 24,
                        "marginBottom": 0,
                        "marginLeft": 0,
                        "marginRight": 0,
                        "marginTop": 0,
                        "paddingBottom": 0,
                        "paddingLeft": 0,
                        "paddingRight": 0,
                        "paddingTop": 0,
                        "textDecorationLine": "none",
                      },
                    ]
                  }
                >
                  Orange
                </Text>
              </View>
              <View
                marginLeft="spacing.7"
                style={
                  Array [
                    Object {
                      "marginLeft": 24,
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      marginTop="spacing.2"
      style={
        Array [
          Object {
            "marginTop": 4,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          }
        }
      >
        <Text
          color="surface.text.muted.lowContrast"
          fontFamily="text"
          fontSize={50}
          fontStyle="italic"
          lineHeight="s"
          style={
            Array [
              Object {
                "color": "hsla(216, 16%, 60%, 1)",
                "fontFamily": "Lato",
                "fontSize": 11,
                "fontStyle": "italic",
                "fontWeight": "400",
                "lineHeight": 20,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Select one
        </Text>
      </View>
    </View>
  </View>
</View>
`;
